--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,39 +4,88 @@
     box-sizing: border-box;
 }
 body{
-    background-color: black;
+    background-color: rgb(168, 163, 163);
     .container{
         padding: 0;
         max-width: 480px;
         min-height: 100vh;
         margin: auto;
-        /* border: 3px solid rgb(148, 137, 137); */
         main{
             .carousel{
-                /* border: 2px solid red; */
                 margin-top: 0px;
-                img{
-                    margin-top: 80px;
-                    height: 250px;
-                    border-radius: 5px;
+                .carousel-item{
+                    img{
+                        margin-top: 65px;
+                        height: 250px;
+                        border-radius: 5px;
+                    }
                 }
+                
             }
             .cards{
+                transition-duration: .5s;
+                display: flex;
+                flex-wrap: wrap;
+                margin-top: 5px;
+                width: 200px;
+                height: 300px;
+                /* border: 2px solid red; */
+                .card{
+                    background-color: rgb(46, 46, 48);
+                    height: 100%;
+                    width: 100%;
+                    border-radius: 5px;
+                    img{
+                        height: 150px;
+                        border-radius: 5px;
+                    }
+                }
+                .card-body{
+                    
+                    /* border: 2px solid red; */
+                    }
+                    .card-title{
+                        color: rgb(212, 217, 220);
+                        width: 200px;
+                        /* border: 2px solid red; */
+                    }
+                    .card-text{
+                        color:rgb(212, 217, 220) ;
+                    }
+                    .btn-primary{
+                        border: .5px solid rgb(212, 217, 220);
+                        
+                        background: rgb(212, 217, 220) ;
+                        color:rgb(46, 46, 48) ;
+
+                    }
+                    .btn-primary:active{
+                        background-color:rgb(46, 46, 48) ;
+                        color: rgb(212, 217, 220);
+                    }
+                }
+                .cards:hover{
+                    transition-duration: .5s;
+                    border-radius: 6px;
+                    box-shadow: 1px 1px 3px 4px rgba(0, 0, 0, 0.466);
+                }
+            }
+            /* .cards{
                 margin-top: 20px;
                 background-color: rgb(211, 210, 211);
                 height:250px;
                 width: 200px;
                 /* border: 2px solid red; */
-                border-radius: 5px;
+                /* border-radius: 5px;
                 .card-img{
                     height: 55%;
                     width: 100%;
-                    img{
-                        height: 100%;
+                    img{ */
+                        /* height: 100%;
                         width: 100%;
                         border-radius: 5px;
-                    }
-                }
+                    } */
+                /* }
                 .card-body{
                     display: flex;
                     align-items: center;
@@ -44,12 +93,12 @@ body{
                         display: flex;
                         align-items: center;
                         flex-direction: column;
-                        h3{
+                        h3{ */
                             /* margin-top: px; */
-                            margin-left: 25px;
-                        }
-                        p{
-                            /* margin-top: 4px; */
+                            /* margin-left: 25px;
+                        } */
+                        /* p{
+                            margin-top: 4px;
                             margin-left: 30px;
                         }
                         button{
@@ -65,13 +114,14 @@ body{
                 cards:hover{
                     box-shadow: 2px 2px 3px 1px rgb(219, 53, 53);
                 }
-                
+                 */
                
-            }
+            } 
            
-        }
+        
         header#site-header{
             nav.navbar{
+                border-radius: 5px;
                 max-width: 480px;
                 margin: auto;
                 height: 60px;
@@ -95,5 +145,5 @@ body{
             top: 0;
             z-index: 10;
         }
+     
     }
-}
